# pi_full_monitor

./: README.md  install.sh  pyproject.toml  requirements.txt  setup.py
pi_monitor/: __main__.py  monitor.py  utils.py
