[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-full-monitor"
version = "1.0.0"
description = "CLI dashboard for Raspberry Pi performance monitoring"
authors = [{ name = "Your Name", email = "your-email@example.com" }]
dependencies = ["psutil", "rich"]

[project.scripts]
pi_full_monitor = "pi_full_monitor.cli:main"  # Adjust path to your main script
