[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-full-monitor"
version = "1.0.0"
description = "A CLI dashboard for Raspberry Pi performance monitoring."
authors = [{ name = "Karim Jaber", email = "me@karimjaber.net" }]
dependencies = ["psutil", "rich"]

[project.scripts]
pi_full_monitor = "pi_full_monitor.monitor:main"
